# pocketbase-pyclient

./: .gitignore  README.md  pb_schema.json  pocketbase.py  pyproject.toml  setup.py
pocketbase_pyclient/: __init__.py  auth.py  crud.py  models.py  pocketbase.py  services.py
tests/: test_pocketbase.py
