[project]
name = "pocketbase-pyclient"
version = "0.0.11"
description = "Python client for pocketbase"
authors = [
    {name = "kirovj", email = "j-wyt@qq.com"},
]
dependencies = [
    "httpx>=0.23.0",
]
requires-python = ">=3.7"
readme = "README.md"
keywords = ["pocketbase", "client", "sdk"]
license = {text = "MIT"}

[project.urls]
Repository = "https://github.com/kirovj/pocketbase-pyclient"

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
