[project]
name = "pocketbase-pyclient"
version = "0.0.16"
description = "Python client for pocketbase"
authors = [
    {name = "kirovj", email = "j-wyt@qq.com"},
]
dependencies = [
    "httpx>=0.23.0",
]
requires-python = ">=3.7"
readme = "README.md"
keywords = ["pocketbase", "client", "sdk"]
license = {text = "MIT"}

[project.urls]
Repository = "https://github.com/kirovj/pocketbase-pyclient"

[project.optional-dependencies]
[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.1.3",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
